# rta-desktop

./: .gitignore  BUILD.md  LAUNCH.md  README.md  flake.nix  meson.build  meson_options.txt  package-lock.json  package.json  plan.md  test.py
.github/workflows/: build.yml
app/: instructions.md
backend/: .env.example  .gitignore  TIER_LIMITS.md  import_dataset.py  pyproject.toml  requirements.txt  wrangler.toml
backend/rta_backend/: __init__.py  auth.py  billing.py  data.py  db.py  main.py  prompts.py  proxy.py  security.py  utils.py
browser-app/: package.json
cli/: .gitignore  buggy.py  fixed.py  pyproject.toml
cli/.rta/: history.json
cli/rta_cli/: __init__.py  agent.py  auth.py  chat.py  cmd_auth.py  cmd_clone.py  cmd_init.py  commands.py  config.json  utils.py
cli/rta_cli/functions/: create_dir.py  delete_file.py  edit_file.py  get_file_content.py  get_files_info.py  glob_search.py  list_directory.py  run_python_file.py  write_file.py
data/core/: emptyview.lua  init.lua  process.lua
data/plugins/: bracketmatch.lua  centerdoc.lua  minimap.lua  rta_chat.lua
desktop/: README.md  checklist.md  package.json  vite.config.js
desktop/src/: App.jsx  index.css
desktop/src-tauri/: Cargo.toml  main.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src/components/: ChatPanel.jsx  EditorPanel.jsx  MainLayout.jsx
desktop/src/pages/: LandingPage.jsx
desktop_plans/: README.md  checklist.md  starting instructions.md
electron-app/: package.json
resources/linux/: com.lite_xl.LiteXL.desktop
resources/macos/: Info.plist.in
rta-desktop/: flake.nix  package.json
rta-desktop/src/browser/: rta-chat-contribution.ts  rta-chat-widget.tsx  rta-desktop-contribution.ts  rta-desktop-frontend-module.ts  rta-status-contribution.ts
rta-desktop/src/browser/style/: index.css
scripts/: build.sh
scripts/innosetup/: innosetup.iss.in
src/: main.c  meson.build  renderer.c
src/api/: renderer.c
tests/: mock_lite_xl.lua  run.lua
website/: dashboard.css  dashboard.js  index.html  main.js  style.css  waitlist.html
