[project]
name = "rta-backend"
version = "0.1.0"
description = "Backend API layer for Rta - AI-assisted code editor"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic[email]==2.9.0",
    "python-dotenv==1.0.1",
    "supabase==2.10.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "stripe==11.0.0",
    "slowapi==0.1.9",
    "httpx==0.27.2",
]

[project.scripts]
rta-server = "rta_backend.main:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rta_backend*"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
