[project]
name = "rta-cli"
version = "0.1.0"
description = "Fast CLI tool for Rta - AI-assisted code editor"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "google-genai==1.73.0",
    "python-dotenv==1.2.2",
]

[project.scripts]
rta = "rta_cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rta_cli*"]

[tool.uv.workspace]
members = [
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.3.0",
]

